Correccion de links

--- a/index.html
+++ b/index.html
@@ -171,52 +171,52 @@
 
 
     <section class="galeria">
-      <a href="#images1"><img src="/assets/img/actividades/1.png" alt="" /></a>
-      <a href="#images2"><img src="/assets/img/actividades/2.jpg" alt="" /></a>
-      <a href="#images3"><img src="/assets/img/actividades/3.jpeg" alt="" /></a>
-      <a href="#images4"><img src="/assets/img/actividades/4.jpeg" alt="" /></a>
-      <a href="#images5"><img src="/assets/img/actividades/5.jpeg" alt="" /></a>
-      <a href="#images6"><img src="/assets/img/actividades/6.jpeg" alt="" /></a>
+      <a href="#images1"><img src="./assets/img/actividades/1.png" alt="" /></a>
+      <a href="#images2"><img src="./assets/img/actividades/2.jpg" alt="" /></a>
+      <a href="#images3"><img src="./assets/img/actividades/3.jpeg" alt="" /></a>
+      <a href="#images4"><img src="./assets/img/actividades/4.jpeg" alt="" /></a>
+      <a href="#images5"><img src="./assets/img/actividades/5.jpeg" alt="" /></a>
+      <a href="#images6"><img src="./assets/img/actividades/6.jpeg" alt="" /></a>
     </section>
 
     <article class="light-box" id="images1">
       <a href="#images6" class="next"><i class="fas fa-arrow-left"></i></a>
-      <img src="/assets/img/actividades/1.png" alt="Actividad 1">
+      <img src="./assets/img/actividades/1.png" alt="Actividad 1">
       <a href="#images2" class="next"> <i class="fas fa-arrow-right"></i></a>
       <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="images2">
       <a href="#images1" class="next"><i class="fas fa-arrow-left"></i></a>
-      <img src="/assets/img/actividades/2.jpg" alt="Actividad 2">
+      <img src="./assets/img/actividades/2.jpg" alt="Actividad 2">
       <a href="#images3" class="next"> <i class="fas fa-arrow-right"></i></a>
       <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="images3">
       <a href="#images2" class="next"><i class="fas fa-arrow-left"></i></a>
-      <img src="/assets/img/actividades/3.jpeg" alt="Actividad 3">
+      <img src="./assets/img/actividades/3.jpeg" alt="Actividad 3">
       <a href="#images4" class="next"> <i class="fas fa-arrow-right"></i></a>
       <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="images4">
       <a href="#images3" class="next"><i class="fas fa-arrow-left"></i></a>
-      <img src="/assets/img/actividades/4.jpeg" alt="Actividad 1">
+      <img src="./assets/img/actividades/4.jpeg" alt="Actividad 1">
       <a href="#images5" class="next"> <i class="fas fa-arrow-right"></i></a>
       <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="images5">
       <a href="#images4" class="next"><i class="fas fa-arrow-left"></i></a>
-      <img src="/assets/img/actividades/5.jpeg" alt="Actividad 1">
+      <img src="./assets/img/actividades/5.jpeg" alt="Actividad 1">
       <a href="#images6" class="next"> <i class="fas fa-arrow-right"></i></a>
       <a href="#" class="close">X</a>
     </article>
 
     <article class="light-box" id="images6">
       <a href="#images5" class="next"><i class="fas fa-arrow-left"></i></a>
-      <img src="/assets/img/actividades/6.jpeg" alt="Actividad 1">
+      <img src="./assets/img/actividades/6.jpeg" alt="Actividad 1">
       <a href="#images1" class="next"> <i class="fas fa-arrow-right"></i></a>
       <a href="#" class="close">X</a>
     </article>
@@ -234,7 +234,7 @@
       <div class="voluntariado__video">
 
         <div class="voluntariado__video__video">
-          <video src="/assets/video/voluntariado2.mp4" autoplay="true" muted="false" controls loop="true" width="100%"
+          <video src="./assets/video/voluntariado2.mp4" autoplay="true" muted="false" controls loop="true" width="100%"
             height="50%">
             Tu navegador no soporta videos en HTML5.
           </video>
